[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsast-cli"
version = "0.1.0"
description = "CLI HTTP client for GSAST: submit scans and retrieve results from the API."
readme = "../README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Seznam Application Security Team"}
]
maintainers = [
    {name = "Seznam Application Security Team"}
]
keywords = [
    "security",
    "sast",
    "static-analysis",
    "vulnerability-scanner",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance"
]

dependencies = [
    "gsast-core",
    "click>=8.0.0",
    "requests==2.28.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gsast_cli"]

[project.scripts]
gsast = "gsast_cli.cli_client:cli"
