[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsast-core"
version = "0.1.0"
description = "Shared library for GSAST: models, configs, repolib, sastlib, and utilities."
readme = "../README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Seznam Application Security Team"}
]
maintainers = [
    {name = "Seznam Application Security Team"}
]
keywords = [
    "security",
    "sast",
    "static-analysis",
    "vulnerability-scanner",
    "semgrep",
    "trufflehog",
    "dependency-confusion",
    "github",
    "gitlab",
    "security-scanner"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing"
]

dependencies = [
    "importlib-metadata==6.8.0",
    "jsonpath-ng>=1.7.0",
    "jsonschema>=4.0.0",
    "PyGithub>=2.4.0",
    "python-gitlab==3.14.0",
    "redis==4.5.4",
    "requests==2.28.2",
    "requests-cache==1.0.1",
    "tqdm==4.65.0",
    "typing_extensions>=4.14.1",
    "urllib3==1.26.15",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gsast_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# External plugins can register themselves via:
# [project.entry-points."gsast.scanners"]
# my-scanner = "my_scanner_plugin:MyScanner"
