[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "global-sast-scan"
version = "0.1.0"
description = "A distributed security scanning tool for GitLab and GitHub repositories that performs Static Application Security Testing (SAST) using multiple security scanners including Semgrep, Trufflehog, and Confusion Hunter."
readme = "../README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Seznam Application Security Team"}
]
maintainers = [
    {name = "Seznam Application Security Team"}
]
keywords = [
    "security",
    "sast",
    "static-analysis", 
    "vulnerability-scanner",
    "semgrep",
    "trufflehog",
    "dependency-confusion",
    "github",
    "gitlab",
    "security-scanner"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing"
]

dependencies = [
    "async-timeout==4.0.2",
    "attrs==23.1.0",
    "blinker==1.6.3",
    "cattrs==22.2.0",
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "confusion-hunter",
    "exceptiongroup==1.1.1",
    "Flask==3.0.0",
    "idna==3.4",
    "importlib-metadata==6.8.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "mock==5.0.2",
    "platformdirs==3.2.0",
    "python-gitlab==3.14.0",
    "PyGithub>=2.4.0",
    "redis==4.5.4",
    "requests==2.28.2",
    "requests-cache==1.0.1",
    "requests-toolbelt==0.10.1",
    "rq==1.13.0",
    "six==1.16.0",
    "tqdm==4.65.0",
    "typing_extensions>=4.14.1",
    "url-normalize==1.4.3",
    "urllib3==1.26.15",
    "Werkzeug==3.0.1",
    "zipp==3.17.0",
    "limits==5.4.0",
    "jsonpath-ng>=1.7.0",
    "flasgger"
]

[project.optional-dependencies]
production = [
    "uWSGI==2.0.23",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gsast"]
